--- a/Javascript/实现一个轮播功能/index.html
+++ b/Javascript/实现一个轮播功能/index.html
@@ -7,78 +7,170 @@
   <title></title>
 </head>
 <body>
-  <div id="carousel">
-    <div class="imgBox"></div>
+  <div class="grid-box">
+    <ul class="imgBox">
+      <li><img src="./imgs/img1.jpg"></li>
+      <li><img src="./imgs/img2.jpg"></li>
+      <li><img src="./imgs/img3.jpg"></li>
+      <li><img src="./imgs/img4.jpg"></li>
+      <li><img src="./imgs/img5.jpg"></li>
+      <!-- <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li> -->
+    </ul>
+
+    <div class="prev">
+      <span><</span>
+    </div>
+    <div class="next">
+      <span>></span>
+    </div>
+
+    <div class="num-box">
+      <ul class="num-ul">
+        <li data-index="0" style="background: #ccc;"></li>
+        <li data-index="1"></li>
+        <li data-index="2"></li>
+        <li data-index="3"></li>
+        <li data-index="4"></li>
+      </ul>
+    </div>
   </div>
 </body>
 <script>
-  const config = {
-    imgBox: document.querySelector('.imgBox'),
-    imgs: [
-      './imgs/img1.jpg',
-      './imgs/img2.jpg',
-      './imgs/img3.jpg',
-      './imgs/img4.jpg',
-      './imgs/img5.jpg',
-    ],
-    mIndex: 0,
-    delay: 1000
+  let prev = document.querySelector('.prev')
+  let next = document.querySelector('.next')
+  let imgBox = document.querySelector('.imgBox')
+  let numDom = document.querySelector('.num-ul')
+  let numBox = document.querySelector('.num-ul').getElementsByTagName("li")
+  console.log('=>', numBox)
+  let index = 0
+  prev.onclick = function () {
+    prev_pic()
   }
-  class Box {
-    constructor(data) {
-      const {
-        delay,
-        imgBox,
-        mIndex,
-        imgs
-      } = data
-      this.imgBox = imgBox
-      this.imgs = imgs
-      this.delay = delay
-      this.mIndex = mIndex
-      this.appendImg()
-      setInterval(this.playing.bind(this), delay)
-    }
-    appendImg() {
-      for (let i = 0; i < this.imgs.length; i++) {
-        const div = document.createElement('div')
-        div.style.cssText = `
-          background: url(${this.imgs[i]}) no-repeat center;width: 100%;
-          height: 300px;
-          position: absolute;
-          top: 0;
-          left: 0;
-          z-index: ${i * -1 + 100}
-        `
-        this.imgBox.appendChild(div)
-      }
-    }
-    playing() {
-      const divs = this.imgBox.querySelectorAll('div')
-      divs[this.mIndex].style.display = 'none'
-      if (this.mIndex < 4) {
-        this.mIndex++
-      } else {
-        this.mIndex = 0
-      }
-      divs[this.mIndex].style.display = 'block'
-    }
+  next.onclick = function () {
+    next_pic()
   }
-  new Box(config)
-
+  function prev_pic() {
+    imgBox.style.transition = '0.4s'
+    numBox[index].style.backgroundColor = ""
+    if (index === 0) {
+      imgBox.style.transition = '0s'
+      index = 4
+    } else {
+      --index
+    }
+    
+    imgBox.style.left = `-${index * 1200}px`
+    numBox[index].style.backgroundColor = "#ccc"
+    console.log('=>imgBox.style', imgBox.style)
+  }
+  function next_pic() {
+    imgBox.style.transition = '0.4s'
+    numBox[index].style.backgroundColor = ""
+    if (index === 4) {
+      imgBox.style.transition = '0s'
+      index = 0
+    } else {
+      ++index
+    }
+    imgBox.style.left = `-${index * 1200}px`
+    numBox[index].style.backgroundColor = "#ccc"
+  }
+  numDom.onclick = function (e) {
+    imgBox.style.transition = '0.4s'
+    numBox[index].style.backgroundColor = ""
+    index = e.target.dataset.index
+    imgBox.style.left = `-${index * 1200}px`
+    numBox[index].style.backgroundColor = "#ccc"
+  }
+  let timer = null
+  function autoPlay() {
+    timer = setInterval(() => {
+      prev_pic()
+    }, 1000)
+  }
+  autoPlay()
+  imgBox.onmouseenter = function () {
+    clearInterval(timer)
+  }
+  imgBox.onmouseleave = function () {
+    autoPlay()
+  }
 </script>
 <style>
-  #carousel{
-    width: 100%;
+  *{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  .grid-box{
+    width: 1200px;
     height: 400px;
     margin-top: 200px;
+    overflow: hidden;
+    border: 3px solid #ccc;
+    position: relative;
+    margin: 50px auto;
   }
   .imgBox{
-    border: 3px solid #ccc;
-    text-align: center;
-    position: relative;
-    height: 100%;
-    transition: all 0.4s;
+    width: 6000px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    transition: .5s;
+  }
+  .imgBox li{
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    width: 1200px
+  }
+  .prev,
+  .next{
+    position: absolute;
+    top: calc(50% - 20px);
+    background: #ccc;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+  .prev{
+    left: 0;
+  }
+  .next{
+    right: 0;
+  }
+  .num-box{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    z-index: 2;
+  }
+  .num-ul{
+    display: flex;
+  }
+  .num-ul li{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 9px;
+    color: #fff;
+    margin: 0 4px;
+    cursor: pointer;
+    user-select: none;
   }
 </style>
 </html>
