--- a/Vue.js设计与实现/4.响应系统/4.计算属性和lazy.html
+++ b/Vue.js设计与实现/4.响应系统/4.计算属性和lazy.html
@@ -53,27 +53,34 @@
   }
 
   function effect(fn, options = {}) {
+    // console.log('=>options', options)
+    // console.log('=>fn', fn)
     const effectFn = () => {
       cleanup(effectFn)
       activeEffect = effectFn
+      // console.log('=>888', activeEffect)
       effectStack.push(effectFn)
-      console.log('=fn>', fn)
       const res = fn()
-      console.log('=>res', res)
-      return res
+      // console.log('=>res', res)
+      console.log('=>effectStack', effectStack)
       // return fn()
       effectStack.pop()
+      console.log('=>555', effectStack)
       activeEffect = effectStack[effectStack.length - 1]
+      console.log('=>999', activeEffect)
+      return res
     }
     effectFn.options = options
     effectFn.deps = []
-    if (options.lazy) {
+    if (!options.lazy) {
       effectFn()
     }
     return effectFn
   }
 
   function track(target, key) {
+    // console.log('=>getget-bucket', bucket)
+    // console.log('=>getget-bucket-key', key)
     let maps = bucket.get(target)
     if (!maps) {
       bucket.set(target, maps = new Map())
@@ -83,86 +90,81 @@
       maps.set(key, deps = new Set())
     }
     deps.add(activeEffect)
+    // console.log('=>activeEffect', activeEffect)
+    // console.log('=>activeEffect', activeEffect.deps)
     activeEffect.deps.push(deps)
-    // console.log('=>getget-bucket', bucket)
-    // console.log('=>getget-bucket-key', key)
+
   }
 
   function trigger(target, key) {
-    console.log('=>setset-buckets', bucket)
-    console.log('=>setset-bucket-key', key)
+    // console.log('=>setset-buckets', bucket)
+    // console.log('=>setset-bucket-key', key)
     let maps = bucket.get(target)
     if (!maps) return
     let deps = maps.get(key)
-    console.log('=>deps', deps)
+    // console.log('=>deps', deps)
     if (!deps) return
 
     let depsToRun = new Set()
+    console.log('=>====', activeEffect)
     deps.forEach(item => {
       if (item != activeEffect) {
         depsToRun.add(item)
       }
     })
-    console.log('=>depsToRun', depsToRun)
+    // console.log('=>depsToRun', depsToRun)
     depsToRun.forEach(effect => {
-      console.log('=>effect', effect)
-
+      // console.log('=>effect', effect)
+      // console.log('=>effect', effect.options)
+      // console.log('=>effect-scheduler', effect.options.scheduler)
       if (effect.options.scheduler) {
         effect.options.scheduler(effect)
       } else {
         effect()
       }
-
     })
   }
-
-  /* let jobsQueue = new Set()
-  let isFlushSta = false
-  function flushJob() {
-    if (isFlushSta) return
-    isFlushSta = true
-    let p = Promise.resolve()
-    p.then(() => {
-      jobsQueue.forEach(fn => fn())
-    }).finally(() => {
-      isFlushSta = false
-    })
-  }
-  const result = effect(
-    () => obj.text + ' ' + obj.text2,
-    {
-      // scheduler(fn) {
-      //   jobsQueue.add(fn)
-      //   flushJob()
-      //   // console.log('=>fn', fn)
-      //   // setTimeout(fn)
-      //   // obj.age++
-      //   // obj.age++
-      // }
-      lazy: false
-    }
-  ) */
 
   let myText = computed(() => obj.text + ' ' + obj.text2)
 
   function computed(fn) {
-    console.log('=>ccccccc', fn)
+    let dirty = true
+    let value
     let resFn = effect(
       fn,
       {
-        lazy: true
+        lazy: true,
+        scheduler() {
+          console.log('=>dirtydirty', dirty)
+          if (!dirty) {
+            dirty = true
+            trigger(obj, 'value')
+          }
+        }
       }
     )
-    console.log('=>resFn', resFn)
     const obj = {
       get value() {
-        return resFn()
+        if (dirty) {
+          dirty = false
+          value = resFn()
+          track(obj, 'value')
+        }
+        return value
       }
     }
     return obj
   }
-  console.log('=>myText', myText)
   console.log('=>myText', myText.value)
+  console.log('=>myText', myText.value)
+  // obj.text2 = 'xiaoquan'
+  effect(() => {
+    console.log('=>', myText.value + ' xiaozhao')
+  })
+  obj.text2 = 'yunnnnn'
+  console.log('=>myText', myText.value)
+
+  console.log('=>', bucket)
 
 </script>
 
