--- a/Vue.js设计与实现/4.响应系统/4.计算属性和lazy.html
+++ b/Vue.js设计与实现/4.响应系统/4.计算属性和lazy.html
@@ -196,6 +196,8 @@
       }
       return obj
     }
+    console.log('=>myText', myText.value)
+      console.log('=>myText', myText.value)
     effect(() => {
       console.log('=>pppp', myText.value + '你好')
     })
