--- a/Vue3核心原理探究/test/0428.html
+++ b/Vue3核心原理探究/test/0428.html
@@ -95,8 +95,8 @@
     // )
     // data.name = 'xiaoquan '
     setTimeout(() => {
-        data.name = 'qingyun'
-        // data.age = 29
+        // data.name = 'qingyun'
+        data.age = 29
         // data.ok = false
     }, 2000);
     console.log('=>bucket', bucket)
