--- a/test/demo1/index.html
+++ b/test/demo1/index.html
@@ -7,11 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="nextButton">Next</button>
-    <h3 id="header"></h3>
-    <button id="moreButton"></button>
-    <p id="description"></p>
-    <img id="image" />
-    <script></script>
+    <script type="module" src="./test.js" ></script>
   </body>
 </html>
