--- a/基础巩固/example/事件传播-捕获-冒泡-委托.html
+++ b/基础巩固/example/事件传播-捕获-冒泡-委托.html
@@ -19,7 +19,7 @@
       <li data-index="1" index="111">11</li>
       <li data-index="2" index="222">22</li>
       <li data-index="3" data-type="999" index="333">33</li>
-      <li data-index="4" index="444">44</li>
+      <li data-index="my4" index="444">44</li>
       <li>55</li>
       <li>66</li>
     </ul>
