--- a/基础巩固/generator.html
+++ b/基础巩固/generator.html
@@ -11,7 +11,39 @@
 </body>
 <script>
 
+    let user = {
+        name: 'alex',
+        age: 18
+    }
+    let work = null
+    // let work = {
+    //     address: 'XXX',
+    //     time: '8.30'
+    // }
+    
+    // 1
+    // user.alternate = work
+    // work.alternate = user
+    work = user
+    user = {
+        address: 'XXX',
+        time: '8.30'
+    }
+    user.alternate = work
+    work.alternate = user
+
+    work = user
+    user = null
+  
+
+    // 2
+    // user = 
+    console.log('=>user', user)
+    console.log('=>work', work)
+
 function getNum1() {
+    console.log('=>111', arguments)
+    console.log('=>11', arguments.length-2)
     return new Promise((resolve) => {
         setTimeout(() => {
             console.log('=>', 111)
@@ -20,38 +52,35 @@ function getNum1() {
         resolve()
     })
 }
-function getNum2() {
-    return new Promise((resolve) => {
-        setTimeout(() => {
-            console.log('=>', 222)
-            resolve()
-        }, 3000)
-    })
-}
-function getNum3() {
-    return new Promise((resolve) => {
-        setTimeout(() => {
-            console.log('=>', 333)
-            resolve()
-        }, 1000)
-    })
-}
+console.log('=>1', getNum1('a', 'b', 'c', 'd'))
+// function getNum2() {
+//     return new Promise((resolve) => {
+//         setTimeout(() => {
+//             console.log('=>', 222)
+//             resolve()
+//         }, 3000)
+//     })
+// }
+// function getNum3() {
+//     return new Promise((resolve) => {
+//         setTimeout(() => {
+//             console.log('=>', 333)
+//             resolve()
+//         }, 1000)
+//     })
+// }
 
-// getNum1()
-// getNum2()
-// getNum3()
-
-    let run = function* () {
-        getNum1()
-        yield;
-        getNum2()
-        yield;
-        getNum3()
-        return 1
-    }()
-    run.next()
-    // run.next()
-    // run.next()
+//     let run = function* () {
+//         getNum1()
+//         yield;
+//         getNum2()
+//         yield;
+//         getNum3()
+//         return 1
+//     }()
+//     run.next()
+//     run.next()
+//     run.next()
     // console.log('=>run', run)
     // console.log('=>run', run.next())
     // console.log('=>run', run.next())
