--- a/test/test12.html
+++ b/test/test12.html
@@ -7,8 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <div style="height: 100px;width: 200px;background: red;">
-    <div class="sub" style="width: 50%;height: inherit;background-color: inherit;">22</div>
+  <div contenteditable='true' style="height: 100px;width: 200px;background: red;">
+    <div class="sub" style="width: 50%;height: inherit;background-color: inherit;">22
+    <p>999<span>yellow</span></p></div>
   </div>
 </body>
 <script>
