--- a/test/test14.html
+++ b/test/test14.html
@@ -7,18 +7,45 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="container" class="clearfix">
+  <p class="center">我是中间</p>
+  <p class="left">我是左边</p>
+  <p class="right">我是右边</p>
+</div>
+
 </body>
 <script>
-    let timer = setTimeout(() => {
-        console.log('=>', 111)
-        setTimeout(() =>{
-            console.log('=>', 222)
-            setTimeout(() => {
-                console.log('=>', 333)
-            }, 3000)
-        }, 2000)
-    },1000)
-    setTimeout(() => {clearTimeout(timer)}, 1000)
 </script>
+<style>
+    #container {
+  padding-left: 200px;
+  padding-right: 150px;
+  overflow: auto;
+}
+#container p {
+  float: left;
+}
+.center {
+  width: 100%;
+  background-color: lightcoral;
+}
+.left {
+  width: 200px;
+  position: relative;
+  left: -200px;
+  margin-left: -100%;
+  background-color: lightcyan;
+}
+.right {
+  width: 150px;
+  margin-right: -150px;
+  background-color: lightgreen;
+}
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+</style>
 </html>
