--- a/基础巩固/example/test2.html
+++ b/基础巩固/example/test2.html
@@ -7,8 +7,33 @@
     <title>Document</title>
 </head>
 <body>
-    <div></div>
+    <div class='grid'>
+        <div class='sub'></div>
+    </div>
 </body>
+<style>
+    *{
+        padding: 0;
+        margin: 0;
+    }
+    div{
+        width: 300px;
+        height: 300px;
+    }
+    .grid{
+        position: absolute;
+        /* margin: 200px; */
+        top: 300px;
+        left: 300px;
+        background: red;
+    }
+    .sub{
+        position: absolute;
+        top: 500px;
+        left: 500px;
+        background: black;
+    }
+</style>
 <script>
     let obj = {
         name: 'alex'
